# Guidance-SDK

./: .gitignore  README.md
demo/obstacle_bypass/: readme.md
demo/obstacle_bypass/balance_strategy/: log.txt
demo/obstacle_bypass/balance_strategy/devel/: .catkin  .rosinstall  setup.sh
demo/obstacle_bypass/balance_strategy/devel/lib/dji_sdk/: dji_sdk_node
demo/obstacle_bypass/balance_strategy/devel/lib/pkgconfig/: dji_sdk.pc
demo/obstacle_bypass/balance_strategy/devel/share/dji_sdk/cmake/: dji_sdkConfig.cmake
demo/obstacle_bypass/balance_strategy/launch/: sdk_demo.launch
demo/obstacle_bypass/balance_strategy/src/: dji_sdk_node.cpp
demo/obstacle_bypass/balance_strategy/src/dji_sdk/include/: DJI_utility.h
demo/obstacle_bypass/balance_strategy/src/dji_sdk/src/: dji_sdk_node.cpp
demo/obstacle_bypass/balance_strategy/src/dji_sdk/src/sdk_lib/: imagetransfer.h
demo/obstacle_bypass/balance_strategy/src/sdk_lib/: DJI_App.cpp
demo/obstacle_bypass/discontinuity-balance_strategy/src/: dji_sdk_node.cpp
demo/obstacle_bypass/discontinuity-balance_strategy/src/dji_sdk/include/: DJI_HardDriver_Manifold.h
demo/obstacle_bypass/discontinuity-balance_strategy/src/dji_sdk/src/: dji_sdk_node.cpp
demo/obstacle_bypass/discontinuity_strategy/: log.txt
demo/obstacle_bypass/discontinuity_strategy/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
demo/obstacle_bypass/discontinuity_strategy/devel/lib/dji_sdk/: dji_sdk_node
demo/obstacle_bypass/discontinuity_strategy/devel/lib/pkgconfig/: dji_sdk.pc
demo/obstacle_bypass/discontinuity_strategy/devel/share/dji_sdk/cmake/: dji_sdkConfig.cmake
demo/obstacle_bypass/discontinuity_strategy/include/: usb_transfer.h
demo/obstacle_bypass/discontinuity_strategy/launch/: sdk_demo.launch
demo/obstacle_bypass/discontinuity_strategy/src/dji_sdk/: CMakeLists.txt  log.txt
demo/obstacle_bypass/discontinuity_strategy/src/dji_sdk/include/: DJI_guidance.h
demo/obstacle_bypass/discontinuity_strategy/src/dji_sdk/src/: dji_sdk_node.cpp
demo/obstacle_bypass/discontinuity_strategy/src/dji_sdk/src/sdk_lib/: DJI_utility.cpp
demo/sdk_tracking_camshift/: camshift.2010.sln  camshift.2013.sln  readme.txt  use_opencv_debug_vs2010_x64.props  use_opencv_debug_vs2010_x86.props  use_opencv_release_vs2010_x86.props  use_opencv_release_vs2013_x64.props  use_opencv_release_vs2013_x86.props
demo/sdk_tracking_camshift/camshift/: Makefile  camshift.2010.vcxproj  camshift.2010.vcxproj.filters  camshift.2013.vcxproj  camshift.2013.vcxproj.filters  camshiftDepth.cpp  log.txt
doc/: 51-android.rules  FAQ.md  FAQ_cn.md  FAQ_en.md  Guidance_SDK_API.md
doc/DeveloperGuide/: DeveloperGuide.md
doc/Guidance_SDK_API/: Guidance_SDK_API.md  Guidance_SDK_API_cn.md  Guidance_SDK_API_en.md
doc/Guides/Developer_Guide/cn/: DeveloperGuide_cn.md
doc/Guides/Developer_Guide/en/: DeveloperGuide_en.md
doc/Guides/RunExample/: runExample.md
doc/Guides/Visual_Tracking_tutorial/: visual_Tracking_tutorial_cn.md  visual_Tracking_tutorial_en.md
doc/开发者指南/: 开发者指南.md
examples/GuidanceRos/: CMakeLists.txt  README.md  package.xml
examples/GuidanceRos/src/: DJI_utility.cpp  GuidanceNode.cpp  GuidanceNodeTest.cpp
examples/RosNode/: CMakeLists.txt
examples/RosNode/include/: DJI_guidance.h
examples/RosNode/lib/: log.txt
examples/RosNode/src/: GuidanceNodeTest.cpp
examples/uart_example/: Makefile  crc16.cpp  crc16.h  crc32.cpp  crc32.h  main.cpp  protocal_uart_sdk.cpp  protocal_uart_sdk.h  uart_sdk_2010.sln  uart_sdk_2010.vcxproj  uart_sdk_2010.vcxproj.filters
examples/uart_example/linux/: serial.cpp  serial.h
examples/uart_example/windows/: serial.cpp  serial.h
examples/usb_example/: DJI_guidance_example-vs2013.sln  DJI_guidance_example_vs2010.sln  use_Guidance_vs2010_x64.props  use_Guidance_vs2010_x86.props  use_Guidance_vs2013_x64.props  use_Guidance_vs2013_x86.props  use_opencv_release_vs2010_x64.props
examples/usb_example/DJI_guidance_example/: CMakeLists.txt  DJI_guidance_example_vs2010.vcxproj  DJI_guidance_example_vs2010.vcxproj.filters  DJI_guidance_example_vs2013.vcxproj  DJI_utility.h  Makefile  Makefile_noOpenCV  main.cpp
examples/usb_example/DJI_guidance_for_matlab/: DJI_guidance_for_matlab.cpp  DJI_guidance_for_matlab_2010.vcxproj  DJI_guidance_for_matlab_2010.vcxproj.filters  DJI_utility.cpp  DJI_utility.h  matlabGuidance.m
include/: DJI_guidance.h
lib/2010/x64/: DJI_guidance.exp  DJI_guidance.lib
lib/2010/x86/: DJI_guidance.exp  DJI_guidance.lib
lib/2013/x64/: DJI_guidance.exp  DJI_guidance.lib
lib/2013/x86/: DJI_guidance.exp  DJI_guidance.lib
so/TX1/: Makefile  README.txt
